# CppDeepLearning

./: CMakeLists.txt  README.md  main.cpp
FeedForwardNN/include/: ffnn.h
FeedForwardNN/src/: ffnn.cpp  init.cpp
